--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,36 +5,45 @@ on:
     branches: [main]
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-      fail-fast: false  # ← Critical: don't cancel other jobs if one fails
-
+  build-windows:
+    runs-on: windows-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
-
-      - name: Install Linux build deps
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3 make g++
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build
-        run: npm run build
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+      - run: npm install
+      - run: npm run build-win
+      - uses: actions/upload-artifact@v4
         with:
-          name: ${{ runner.os }}-build
+          name: windows-build
+          path: dist/
+
+  build-linux:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - run: sudo apt-get update && sudo apt-get install -y python3 make g++
+      - run: npm install
+      - run: npm run build-linux
+      - uses: actions/upload-artifact@v4
+        with:
+          name: linux-build
+          path: dist/
+
+  build-macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - run: npm install
+      - run: npm run build-mac
+      - uses: actions/upload-artifact@v4
+        with:
+          name: macos-build
           path: dist/
